--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,9 @@ documentation = "https://docs.rs/libinfer"
 readme = "README.md"
 keywords = ["tensorrt", "inference", "machine-learning", "gpu", "cuda"]
 categories = ["api-bindings", "science::ml"]
+exclude = [
+    "test/*",
+]
 
 [lib]
 name = "libinfer"
