--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,7 +31,7 @@ approx = "0.5.1"
 clap = { version = "4.5.27", features = ["derive"] }
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
-ort = "=2.0.0-rc.10"
+ort = { version = "=2.0.0-rc.10", features = ["cuda", "tensorrt"]}
 base64ct = "=1.7.3"
 rand = "0.8.5"
 ndarray = "0.15"
