--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,8 @@ ort = { version = "=2.0.0-rc.10", features = ["cuda", "tensorrt"]}
 base64ct = "=1.7.3"
 rand = "0.8.5"
 ndarray = "0.15"
+scopeguard = "1.2"
+cudarc = { version = "0.12", features = ["std", "cuda-12000"] }
 
 [package.metadata.docs.rs]
 features = ["doc-only"]
@@ -59,4 +61,9 @@ path = "examples/functional_test.rs"
 [[example]]
 name = "onnx_tensorrt_compare"
 path = "examples/onnx_tensorrt_compare.rs"
+
+[[example]]
+name = "device_tensor_compare"
+path = "examples/device_tensor_compare.rs"
+
 
